# PixelPilot

./: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Makefile  PixelPilot.pro  README.md  VISION_FIX_SUMMARY.md  agent.md  config.yaml  main.py  pyproject.toml  qml.qrc  qrc_qml.cpp  requirements-dev.txt  requirements.txt  server.py  test_engine_fix.py  test_vision_fix.py
build_clean/: CMakeCache.txt  Makefile  PixelPilotApp  cmake_install.cmake  pixelpilotapp_qmltyperegistrations.cpp
build_clean/.qt/: .qmlls.build.ini  PixelPilotApp_qml.cmake  PixelPilotApp_res.cmake  QtDeploySupport.cmake  QtDeployTargets.cmake
build_clean/.qt/rcc/: PixelPilotApp_raw_qml_0.qrc  qmake_PixelPilot.qrc  qrc_PixelPilotApp_raw_qml_0.cpp  qrc_qmake_PixelPilot.cpp
build_clean/.rcc/qmlcache/: PixelPilotApp_qml_loader_file_list.rsp  PixelPilotApp_qmlcache_loader.cpp  all_aotstats.aotstatslist  module_PixelPilotApp.aotstatslist
build_clean/.rcc/qmlcache/PixelPilotApp_src/ui/: Main_qml.cpp  Main_qml.cpp.aotstats  NodeGraph_qml.cpp  NodeGraph_qml.cpp.aotstats
build_clean/.rcc/qmlcache/PixelPilotApp_src/ui/components/: GridBackground_qml.cpp  GridBackground_qml.cpp.aotstats  NodeBlock_qml.cpp  NodeBlock_qml.cpp.aotstats
build_clean/.rcc/qmllint/: PixelPilotApp.rsp  PixelPilotApp_json.rsp  PixelPilotApp_module.rsp
build_clean/PixelPilot/: PixelPilotApp_qml_module_dir_map.qrc  qmldir
build_clean/PixelPilot/src/ui/: Main.qml
build_clean/PixelPilot/src/ui/components/: NodeBlock.qml
build_clean/PixelPilotApp_autogen/: moc_predefs.h  mocs_compilation.cpp
build_clean/PixelPilotApp_autogen/VU2PALRVTW/: moc_WaylandScreenGrabber.cpp  moc_WaylandScreenGrabber.cpp.d  moc_WaylandScreenGrabber.cpp.json
build_clean/meta_types/: PixelPilotApp_json_file_list.txt  PixelPilotApp_json_file_list.txt.timestamp  qt6pixelpilotapp_metatypes.json
build_clean/qmltypes/: PixelPilotApp_foreign_types.txt
src/: main.cpp  server.py
src/backend/: WaylandScreenGrabber.cpp  WaylandScreenGrabber.h
src/core/: engine.py  exceptions.py  graph.py  rules.py  serialization.py  state.py
src/gui/: analyzer.py  editor.py  main_window.py  styles.py  workers.py
src/gui/graph/: dialogs.py  graphics.py  scene.py  view.py
src/strategies/: input.py  vision.py
src/ui/: NodeGraph.qml
src/ui/components/: GridBackground.qml  NodeBlock.qml
src/utils/: __init__.py  config.py  logger.py  settings.py  validators.py
tests/: test_config.py  test_graph.py  test_grouping.py  test_input.py  test_logic.py  test_logic_serialization.py  test_phase4.py  test_rules.py  test_serialization.py  test_vision.py
